Fixing style bugs on mobile

--- a/src/sass/layout/calendar.scss
+++ b/src/sass/layout/calendar.scss
@@ -12,7 +12,7 @@
 	overflow: hidden;
 	transition: all 0.25s ease-in;
 	transform: translateY(0);
-	min-height: 550px;
+	min-height: 560px;
 	
 	
 	@include breakpoint(sm) {
